# PomoPeak

./: .gitignore  .gitmodules  README.md
PomoPeak/: .env.template  CMakeLists.txt  PomoPeakSettings.h  Resources.qrc  Skin.h  TaskInputFilter.h  audiocodeshelper.cpp  audiocodeshelper.h  audiomimetypeshelper.h  databasetables.cpp  databasetables.h  daytaskstats.cpp  daytaskstats.h  flowhandler.cpp  flowhandler.h  main.cpp  palette1.xml  pomopeak.cpp  pomopeak.h  pomopeak.ui  pomopeaksettings.cpp  pomopeaksettings.h  pomopeaksettings.ui  pomopeakstats.cpp  pomopeakstats.h  pomopeakstats.ui  pomosettings.cpp  pomosettings.h  settings.cpp  settings.h  settingsDTO.cpp  settingsdto.cpp  settingsdto.h  sounds.qrc  sqliteHandler.cpp  sqliteHandler.h  stats.cpp  stats.h  stats.ui  statsdto.cpp  (+17 more)
PomoPeak/data/: Resources.qrc  sounds.qrc
PomoPeak/include/: GPTHelper.h  PomodoroFacts.h  QObjectInitialization.h  audiomimetypeshelper.h  databasetables.h  flowhandler.h  pathhelper.h  settings.h  settingsdto.h  sqliteHandler.h
PomoPeak/installer/config/: config.xml  style.qss
PomoPeak/src/: GPTHelper.cpp  PomodoroFacts.cpp  Skin.cpp  audiomimetypeshelper.cpp  databasetables.cpp  flowhandler.cpp  settings.cpp  settingsdto.cpp  sqliteHandler.cpp  task.cpp  taskmanager.cpp  trayiconhandler.cpp
PomoPeak/ui/: pomopeak.cpp  pomopeak.h  pomopeak.ui  pomopeaksettings.cpp  pomopeaksettings.h  pomopeaksettings.ui  pomopeakstats.cpp  pomopeakstats.h  pomopeakstats.ui  taskQT.cpp  taskQT.h  taskQT.ui
